--- a/.github/workflows/update-visitor-count.yml
+++ b/.github/workflows/update-visitor-count.yml
@@ -17,6 +17,6 @@ jobs:
             const path = require('path');
             const filePath = path.join(process.env.GITHUB_WORKSPACE, 'README.md');
             let content = fs.readFileSync(filePath, 'utf8');
-            const visitorBadge = `![Visitor Count](https://visitor-badge.glitch.me/badge?page_id=Livia020799.your-repo-name)`;
+            const visitorBadge = `![Visitor Count](https://visitor-badge.glitch.me/badge?page_id=Livia020799.README.md)`;
             content = content.replace(/Visitor Count/g, visitorBadge);
             fs.writeFileSync(filePath, content);
